# SimplisticIO

./: CMakeLists.txt  CMakeSettings.json  README.md
include/simplistic/: io.h
include/simplistic/io/: Exceptions.h  IIO.h  Object.h  SelfIO.h
include/simplistic/io/Utility/: String.h
src/: CMakeLists.txt  Exceptions.cpp  Object.cpp  Self.cpp
tests/: CMakeLists.txt  playground.cpp
